// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> Compact story renders snapshot 1`] = `
<div
  class="select select--compact"
  data-testid="dropdown"
>
  <label
    class="label u-is-vishidden"
    id="headlessui-listbox-label-13"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-15"
    aria-expanded="true"
    aria-haspopup="true"
    aria-labelledby="headlessui-listbox-label-13 headlessui-listbox-button-14"
    class="select-button select-button--compact"
    id="headlessui-listbox-button-14"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#expand-more"
      />
    </svg>
  </button>
  <div
    aria-labelledby="headlessui-listbox-label-13"
    aria-orientation="vertical"
    class="popover-container select__options select__options--compact"
    id="headlessui-listbox-options-15"
    role="listbox"
    tabindex="0"
  >
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-16"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Dogs
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-17"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Cats
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-18"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Birds
    </div>
  </div>
</div>
`;

exports[`<Select /> CompactUsingChildrenPropAndNoVisibleLabel story renders snapshot 1`] = `
<div
  class="select select--compact"
  data-testid="dropdown"
>
  <label
    class="label u-is-vishidden"
    id="headlessui-listbox-label-43"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-45"
    aria-expanded="true"
    aria-haspopup="true"
    aria-labelledby="headlessui-listbox-label-43 headlessui-listbox-button-44"
    class="select-button select-button--compact"
    id="headlessui-listbox-button-44"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#expand-more"
      />
    </svg>
  </button>
  <div
    aria-labelledby="headlessui-listbox-label-43"
    aria-orientation="vertical"
    class="popover-container select__options select__options--compact"
    id="headlessui-listbox-options-45"
    role="listbox"
    tabindex="0"
  >
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-46"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Dogs
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-47"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Cats
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-48"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Birds
    </div>
  </div>
</div>
`;

exports[`<Select /> CompactWithOptionsRightAligned story renders snapshot 1`] = `
<div
  class="select select--compact"
  data-testid="dropdown"
>
  <label
    class="label u-is-vishidden"
    id="headlessui-listbox-label-19"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-21"
    aria-expanded="true"
    aria-haspopup="true"
    aria-labelledby="headlessui-listbox-label-19 headlessui-listbox-button-20"
    class="select-button select-button--compact"
    id="headlessui-listbox-button-20"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#expand-more"
      />
    </svg>
  </button>
  <div
    aria-labelledby="headlessui-listbox-label-19"
    aria-orientation="vertical"
    class="popover-container select__options select__options--align-right select__options--compact"
    id="headlessui-listbox-options-21"
    role="listbox"
    tabindex="0"
  >
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-22"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Dogs
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-23"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Cats
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-24"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Birds
    </div>
  </div>
</div>
`;

exports[`<Select /> Default story renders snapshot 1`] = `
<div
  class="select select--non-compact"
  data-testid="dropdown"
>
  <label
    class="label"
    id="headlessui-listbox-label-1"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-3"
    aria-expanded="true"
    aria-haspopup="true"
    aria-labelledby="headlessui-listbox-label-1 headlessui-listbox-button-2"
    class="select-button"
    id="headlessui-listbox-button-2"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#expand-more"
      />
    </svg>
  </button>
  <div
    aria-labelledby="headlessui-listbox-label-1"
    aria-orientation="vertical"
    class="popover-container select__options select__options--full-width"
    id="headlessui-listbox-options-3"
    role="listbox"
    tabindex="0"
  >
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-4"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Dogs
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-5"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Cats
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-6"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Birds
    </div>
  </div>
</div>
`;

exports[`<Select /> DefaultWithoutVisibleLabel story renders snapshot 1`] = `
<div
  class="select select--non-compact"
  data-testid="dropdown"
>
  <label
    class="label u-is-vishidden"
    id="headlessui-listbox-label-7"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-9"
    aria-expanded="true"
    aria-haspopup="true"
    aria-labelledby="headlessui-listbox-label-7 headlessui-listbox-button-8"
    class="select-button"
    id="headlessui-listbox-button-8"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#expand-more"
      />
    </svg>
  </button>
  <div
    aria-labelledby="headlessui-listbox-label-7"
    aria-orientation="vertical"
    class="popover-container select__options select__options--full-width"
    id="headlessui-listbox-options-9"
    role="listbox"
    tabindex="0"
  >
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-10"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Dogs
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-11"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Cats
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-12"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Birds
    </div>
  </div>
</div>
`;

exports[`<Select /> SeparateButtonAndMenuWidth story renders snapshot 1`] = `
<div
  class="select select--non-compact"
  data-testid="dropdown"
>
  <label
    class="label u-is-vishidden"
    id="headlessui-listbox-label-25"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-27"
    aria-expanded="true"
    aria-haspopup="true"
    aria-labelledby="headlessui-listbox-label-25 headlessui-listbox-button-26"
    class="select-button"
    id="headlessui-listbox-button-26"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#expand-more"
      />
    </svg>
  </button>
  <div
    aria-labelledby="headlessui-listbox-label-25"
    aria-orientation="vertical"
    class="popover-container select__options separate-button-and-menu-width"
    id="headlessui-listbox-options-27"
    role="listbox"
    tabindex="0"
  >
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-28"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Dogs
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-29"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Cats
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-30"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Birds
    </div>
  </div>
</div>
`;

exports[`<Select /> UsingChildrenProp story renders snapshot 1`] = `
<div
  class="select select--non-compact"
  data-testid="dropdown"
>
  <label
    class="label"
    id="headlessui-listbox-label-31"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-33"
    aria-expanded="true"
    aria-haspopup="true"
    aria-labelledby="headlessui-listbox-label-31 headlessui-listbox-button-32"
    class="select-button"
    id="headlessui-listbox-button-32"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#expand-more"
      />
    </svg>
  </button>
  <div
    aria-labelledby="headlessui-listbox-label-31"
    aria-orientation="vertical"
    class="popover-container select__options select__options--full-width"
    id="headlessui-listbox-options-33"
    role="listbox"
    tabindex="0"
  >
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-34"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Dogs
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-35"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Cats
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-36"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Birds
    </div>
  </div>
</div>
`;

exports[`<Select /> UsingChildrenPropAndNoVisibleLabel story renders snapshot 1`] = `
<div
  class="select select--non-compact"
  data-testid="dropdown"
>
  <label
    class="label u-is-vishidden"
    id="headlessui-listbox-label-37"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-39"
    aria-expanded="true"
    aria-haspopup="true"
    aria-labelledby="headlessui-listbox-label-37 headlessui-listbox-button-38"
    class="select-button"
    id="headlessui-listbox-button-38"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#expand-more"
      />
    </svg>
  </button>
  <div
    aria-labelledby="headlessui-listbox-label-37"
    aria-orientation="vertical"
    class="popover-container select__options select__options--full-width"
    id="headlessui-listbox-options-39"
    role="listbox"
    tabindex="0"
  >
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-40"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Dogs
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-41"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Cats
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-42"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Birds
    </div>
  </div>
</div>
`;

exports[`<Select /> UsingFunctionChildrenProp story renders snapshot 1`] = `
<div
  aria-label="Favorite Animal"
  class="select select--non-compact"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-50"
    aria-expanded="true"
    aria-haspopup="true"
    class="function-children__button"
    id="headlessui-listbox-button-49"
    type="button"
  >
    Select
    <svg
      aria-hidden="true"
      class="icon function-children__icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#filter-list"
      />
    </svg>
  </button>
  <div
    aria-labelledby="headlessui-listbox-button-49"
    aria-orientation="vertical"
    class="popover-container select__options select__options--full-width"
    id="headlessui-listbox-options-50"
    role="listbox"
    tabindex="0"
  >
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-51"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Dogs
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-52"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Cats
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-53"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Birds
    </div>
  </div>
</div>
`;

exports[`<Select /> renders the OpenByDefault story 1`] = `
<div
  class="select select--non-compact"
  data-testid="dropdown"
>
  <label
    class="label"
    id="headlessui-listbox-label-54"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-56"
    aria-expanded="true"
    aria-haspopup="true"
    aria-labelledby="headlessui-listbox-label-54 headlessui-listbox-button-55"
    class="select-button"
    id="headlessui-listbox-button-55"
    type="button"
  >
    <span>
      Cats
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#expand-more"
      />
    </svg>
  </button>
  <div
    aria-activedescendant="headlessui-listbox-option-61"
    aria-labelledby="headlessui-listbox-label-54"
    aria-orientation="vertical"
    class="popover-container select__options select__options--full-width"
    id="headlessui-listbox-options-56"
    role="listbox"
    tabindex="0"
  >
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-60"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Dogs
    </div>
    <div
      aria-selected="true"
      class="popover-list-item popover-list-item--active"
      id="headlessui-listbox-option-61"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__icon"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="1.5rem"
          style="--icon-size: 1.5rem;"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="test-file-stub#check"
          />
        </svg>
      </div>
      Cats
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-62"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Birds
    </div>
  </div>
</div>
`;
